--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,27 @@
 sudo: required
 services:
   - docker
+env:
+  global:
+    - SHA = $(git rev-parse HEAD)
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_Install:
   - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
+  - gcloud config set project <data_needs_to_be_added>
+  - gcloud config set compute/zone <mention_the_zone>
+  - gcloud container clusters get-credentials <name_of_cluster>
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker build -t shoyooyo/react-test -f ./client/Dockerfile.dev ./client
+
+script:
+  -  docker run -e CI=true shoyooyo/react-test npm run test
+
+deploy:
+  provider: script
+  script: bash ./deploy.sh
+  on:
+    branch: master
